# MIEI

./: .gitignore  Average Calculator.xlsx  README.md  Schedule Template.docx
1st Year/1st Semester/Elementos de Engenharia de Sistemas/Arena/: RelatorioNovo.docx
1st Year/1st Semester/Laboratórios de Informática I/Trabalho Prático/: Alguns Comandos.txt
1st Year/1st Semester/Programação Funcional/Fichas/: foldr.hs
1st Year/2nd Semester/Programação Imperativa/2017/: 50_questoes.c  funcoes(ate30).c  parte1.c  parte1v1.txt  parte1v2.txt
2nd Year/1st Semester/Algoritmos e Complexidade/Conteúdo Extra/: graph_adjl.c  travessias.c
2nd Year/1st Semester/Arquitetura de Computadores/Teóricas/: 01-VonNewmann.ppsx  02-MediçãoDesempenho(1).ppsx  03-HierarquiaMemoria.ppsx  04-HMem-Organizacao.ppsx  05-Pipelining.ppsx  06-SuperEscalaridade.ppsx  07-ProcessamentoVectorial.ppsx  08-ArquitecturasMulticore.ppsx  09-OpenMP.ppsx  10-GPUs.ppsx
2nd Year/1st Semester/Estatística Aplicada/: A78485.xlsx
2nd Year/1st Semester/Introdução aos Sistemas Dinâmicos/: Aula1.nb  Aula2.nb  Teste1.nb  Teste2.nb
2nd Year/2nd Semester/Laboratórios de Informática III/Master GitHub/: README.md  _gitattributes  _gitignore
2nd Year/2nd Semester/Lideranca e Empreendorismo/FOCUS/: Relatório.docx
2nd Year/2nd Semester/Sistemas Operativos/: cliente.c  makefile  teste.c
2nd Year/2nd Semester/Sistemas Operativos/2020/: Resumos Teste Online 1.md
3rd Year/1st Semester/Redes de Computadores/Slides/: 2. Network Layer.ppt  3. Link Layer.ppt  (+1 more)
3rd Year/2nd Semester/Computação Gráfica/Trabalho Prático/Fase 1/Motor/: CMakeLists.txt  motor.cpp
(+3949 files in other folders)
